--- a/src/Mapbender/CoreBundle/Resources/views/Template/classic.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Template/classic.html.twig
@@ -4,12 +4,10 @@
 
 {% block favicon %}{{ asset('favicon.png') }}{% endblock %}
 
-{# TODO: Use controller for app.debug, else use dumped assets #}
 {% block css %}
-  <link rel="stylesheet" href="{{ asset('bundles/fomcore/css/frontend/mapbender3_theme.css') }}">
-  <link rel="stylesheet" href="{{ asset('bundles/fomcore/css/frontend/classic.css') }}">
+  <link rel="stylesheet" href="{{ path('mapbender_core_application_assets', {'slug': application.slug, 'type': 'css'}) }}"/>
 {% endblock %}
-    
+
 {% block trans %}
   {{parent()}}
   <script type="text/javascript" src="{{ path('mapbender_core_application_assets', {'slug': application.slug, 'type': 'trans'}) }}"></script>
