--- a/src/Mapbender/CoreBundle/Resources/views/Template/fullscreen_alternative.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Template/fullscreen_alternative.html.twig
@@ -4,18 +4,15 @@
 
 {% block favicon %}{{ asset('favicon.png') }}{% endblock %}
 
-{# TODO: Use controller for app.debug, else use dumped assets #}
 {% block css %}
-  <link rel="stylesheet" href="{{ asset('bundles/fomcore/css/frontend/mapbender3_theme.css') }}">
-  <link rel="stylesheet" href="{{ asset('bundles/fomcore/css/frontend/fullscreen_alternative.css') }}">
+  <link rel="stylesheet" href="{{ path('mapbender_core_application_assets', {'slug': application.slug, 'type': 'css'}) }}"/>
 {% endblock %}
 
-    
 {% block trans %}
   {{parent()}}
   <script type="text/javascript" src="{{ path('mapbender_core_application_assets', {'slug': application.slug, 'type': 'trans'}) }}"></script>
 {% endblock %}
-  
+
 {% block js %}
   {{parent()}}
   <script type="text/javascript" src="{{ path('mapbender_core_application_assets', {'slug': application.slug, 'type': 'js'}) }}"></script>
