Xml Validator (XSD) added

--- a/src/Mapbender/WmsBundle/Resources/views/wmsbundle.trans.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/wmsbundle.trans.twig
@@ -2,3 +2,8 @@
 {{ "mb.wms.wmsloader.class.description" | trans}}
 {{ "mb.wms.wmsloader.tag.wms" | trans}}
 {{ "mb.wms.wmsloader.tag.loader" | trans}}
+{{ "mb.wms.repository.parser.couldnotparse" | trans}} {#{Could not parse CapabilitiesDocument}#}
+{{ "mb.wms.repository.parser.not_supported_document" | trans}} {#{Not supported CapabilitiesDocument}#}
+{{ "mb.wms.repository.parser.not_supported_version" | trans}} {#{The WMS version is not supported}#}
+{{ "mb.wms.repository.parser.not_valid_dtd" | trans}} {#{A WMS document (DTD) is not valid}#}
+{{ "mb.wms.repository.parser.not_valid_xsd" | trans}} {#{A WMS document (XSD) is not valid}#}
