fix firefox toolbar font bug

--- a/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen_alternative.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen_alternative.scss
@@ -44,9 +44,8 @@ $topPaneHeight: 70px;
 /* --------------------------------------------------------- TOOLBARS */
 .toolBar{
   z-index:4;
-  &.top{
-    @include pos($topPaneHeight,0,'',0);
-  }
+  label, span{font-family: $fontFamily;}
+  &.top{@include pos($topPaneHeight,0,'',0);}
   &.bottom{@include absolute('' 0 0 0);}
 }
 
