--- a/src/Mapbender/CoreBundle/Resources/public/sass/template/classic.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/template/classic.scss
@@ -49,6 +49,7 @@ $sidePaneWidth:280px;
 /* --------------------------------------------------------- TOOLBARS */
 .toolBar{
   z-index:4;
+  label, span{font-family: $fontFamily;}
   &.top{@include absolute($headHeight 0 '' 0);}
   &.bottom{@include absolute('' 0 (-$space) 0);}
 }
