--- a/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen.scss
@@ -42,6 +42,7 @@
 /* --------------------------------------------------------- TOOLBARS */
 .toolBar{
   z-index:4;
+  label, span{font-family: $fontFamily;}
   &.top{position:relative;}
   &.bottom{@include absolute('' 0 0 0);}
 }
