--- a/src/Mapbender/CoreBundle/Resources/public/sass/libs/_mixins.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/libs/_mixins.scss
@@ -52,7 +52,7 @@
 @mixin frontendContainerStyle(){
   color:$lightFontColor;
   background-color:darken($contentColor, 60%); //IE8 & 9 fallback
-  background-color:rgba(0,0,0,0.8) !important; // shitty shitty bang bang
+  background-color:rgba(0,0,0,0.8);
 
   [class^="icon"],[class*=" icon"]{
     @include opacity(0.7);
