call metadata added

--- a/src/Mapbender/CoreBundle/Resources/views/Element/featureinfo.json.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/featureinfo.json.twig
@@ -1,5 +1,3 @@
 {
-"mb.core.featureinfo.error.nolayer": "{{ "mb.core.featureinfo.error.nolayer" | trans }}",
-"mb.core.featureinfo.error.unknownoption": "{{ "mb.core.featureinfo.error.unknownoption" | trans }}",
-"mb.core.featureinfo.popup.btn.ok": "{{ "mb.core.featureinfo.popup.btn.ok" | trans }}" 
+"mb.core.metadata.popup.title": "{{ "mb.core.metadata.popup.title" | trans }}"
 }
