--- a/src/Mapbender/CoreBundle/Resources/views/corebundle.trans.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/corebundle.trans.twig
@@ -131,3 +131,31 @@
 
 {{ "mb.core.simplesearch.class.title" | trans }}
 {{ "mb.core.simplesearch.class.description" | trans }}
+
+{{ "mb.core.metadata.section.common" | trans }}
+{{ "mb.core.metadata.section.common.title" | trans }}
+{{ "mb.core.metadata.section.common.name" | trans }}
+{{ "mb.core.metadata.section.common.version" | trans }}
+{{ "mb.core.metadata.section.common.originUrl" | trans }}
+{{ "mb.core.metadata.section.common.description" | trans }}
+{{ "mb.core.metadata.section.common.onlineResource" | trans }}
+{{ "mb.core.metadata.section.common.exceptionFormats" | trans }}
+{{ "mb.core.metadata.section.common.fees" | trans }}
+{{ "mb.core.metadata.section.common.accessconstraints" | trans }}
+
+{{ "mb.core.metadata.popup.title" | trans }}
+{{ "mb.core.metadata.section.contact" | trans }}
+{{ "mb.core.metadata.section.contact.person" | trans }}
+{{ "mb.core.metadata.section.contact.position" | trans }}
+{{ "mb.core.metadata.section.contact.organization" | trans }}
+{{ "mb.core.metadata.section.contact.voiceTelephone" | trans }}
+{{ "mb.core.metadata.section.contact.facsimileTelephone" | trans }}
+{{ "mb.core.metadata.section.contact.electronicMailAddress" | trans }}
+{{ "mb.core.metadata.section.contact.address" | trans }}
+{{ "mb.core.metadata.section.contact.addressType" | trans }}
+{{ "mb.core.metadata.section.contact.addressCity" | trans }}
+{{ "mb.core.metadata.section.contact.addressStateOrProvince" | trans }}
+{{ "mb.core.metadata.section.contact.addressPostCode" | trans }}
+{{ "mb.core.metadata.section.contact.addressCountry" | trans }}
+{{ "mb.core.metadata.section.contact.person" | trans }}
+{{ "mb.core.metadata.section.contact.person" | trans }}
