--- a/src/Mapbender/CoreBundle/Resources/views/corebundle.trans.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/corebundle.trans.twig
@@ -158,4 +158,9 @@
 {{ "mb.core.metadata.section.contact.addressPostCode" | trans }}
 {{ "mb.core.metadata.section.contact.addressCountry" | trans }}
 {{ "mb.core.metadata.section.contact.person" | trans }}
-{{ "mb.core.metadata.section.contact.person" | trans }}
+
+{{ "mb.core.metadata.section.layer" | trans }}
+{{ "mb.core.metadata.section.layer.name" | trans }}
+{{ "mb.core.metadata.section.layer.title" | trans }}
+{{ "mb.core.metadata.section.layer.srs" | trans }}
+{{ "mb.core.metadata.section.layer.bbox" | trans }}
