GPSPosition - added option to have map follow position

--- a/src/Mapbender/ManagerBundle/Resources/views/Element/gpsposition.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/gpsposition.html.twig
@@ -14,4 +14,6 @@
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.refreshinterval) }}{{ form_widget(form.configuration.refreshinterval) }}
     <div class="clearContainer"></div>
+    {{ form_label(form.configuration.follow) }}{{ form_widget(form.configuration.follow) }}
+    <div class="clearContainer"></div>
 </div>
