--- a/src/Mapbender/CoreBundle/Resources/views/Element/gpsposition.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/gpsposition.html.twig
@@ -1,1 +1,1 @@
-<span id="{{ id }}" class="mb-gpsButton iconGps iconBig iconGps" title="{{ configuration.tooltip|default(title)|trans }}">{% if configuration.label %}{{ title|trans }}{% endif %}</span>
+<span id="{{ id }}" class="mb-gpsButton iconBig {{ configuration.icon|default('iconGPS') }}" title="{{ configuration.tooltip|default(title)|trans }}">{% if configuration.label %}{{ title|trans }}{% endif %}</span>
