--- a/src/Mapbender/CoreBundle/Resources/views/Element/search_router.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/search_router.html.twig
@@ -3,7 +3,7 @@
 
     <div class="search-forms" novalidate="novalidate">
         {% for form in element.forms %}
-            <form name="{{ form.getName() }}">
+            <form name="{{ form.getName() }}" autocomplete="off">
                 {{ form_widget(form.createView) }}
             </form>
         {% endfor %}
