SearchRouter: Result counter added

--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/search_router.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/search_router.scss
@@ -29,6 +29,10 @@ $searchRouterInputWidth:290px;
   td{padding-right:$space/2;}
   tr{@extend .linkButton}
   .search-forms > form > div > div {clear:both;} // the ugly and unflexible way
+
+  .result-counter {
+    text-align: right;
+  }
 }
 // dublicate ! > components
 .ui-autocomplete{
