--- a/src/Mapbender/CoreBundle/Resources/views/Element/featureinfo.json.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/featureinfo.json.twig
@@ -1,3 +1,4 @@
 {
-"mb.core.metadata.popup.title": "{{ "mb.core.metadata.popup.title" | trans }}"
+"mb.core.metadata.popup.title": "{{ "mb.core.metadata.popup.title" | trans }}",
+"mb.core.featureinfo.popup.btn.ok": "{{ "mb.core.featureinfo.popup.btn.ok" | trans }}"
 }
