adapted to new form api after symfony upgrade

--- a/src/Mapbender/ManagerBundle/Resources/views/Repository/new.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Repository/new.html.twig
@@ -14,7 +14,7 @@
 {% block manager_content %}
 
 {% for manager in managers %}
-  {% render manager.startAction %}
+  {% render controller(manager.startAction) %}
   <div class="clearContainer"></div>
 {% endfor %}
 
