--- a/src/Mapbender/WmsBundle/Resources/views/Repository/form.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Repository/form.html.twig
@@ -1,15 +1,15 @@
 <fieldset class="serviceAddBox left box">
   <legend>{{"mb.wms.wmsloader.repo.form.label.ogcwms"|trans}}</legend>
   <form action="{{path('mapbender_manager_repository_create', {'managertype': form.vars.data.getManagertype()})}}" method="post" novalidate="novalidate">
-      <label class="left labelInput" for="{{ form.originUrl.get('id') }}">{{"mb.wms.wmsloader.repo.form.label.serviceurl" | trans}}</label>
+      <label class="left labelInput" for="{{ form.originUrl.vars['id'] }}">{{"mb.wms.wmsloader.repo.form.label.serviceurl" | trans}}</label>
       {{ form_widget(form.originUrl) }}
       <div class="clearContainer"></div>
 
-      <label class="left labelInput" for="{{ form.username.get('id') }}">{{"mb.wms.wmsloader.repo.form.label.username" | trans}}</label>
+      <label class="left labelInput" for="{{ form.username.vars['id'] }}">{{"mb.wms.wmsloader.repo.form.label.username" | trans}}</label>
       {{ form_widget(form.username) }}
       <div class="clearContainer"></div>
 
-      <label class="left labelInput" for="{{ form.password.get('id') }}">{{"mb.wms.wmsloader.repo.form.label.password" | trans}}</label>
+      <label class="left labelInput" for="{{ form.password.vars['id'] }}">{{"mb.wms.wmsloader.repo.form.label.password" | trans}}</label>
       {{ form_widget(form.password) }}
       <div class="clearContainer"></div>
 
