Added regex preprocessing to SimpleSearch

--- a/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/simplesearch.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/simplesearch.html.twig
@@ -7,6 +7,10 @@
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.query_format) }}{{ form_widget(form.configuration.query_format) }}
     <div class="clearContainer"></div>
+    {{ form_label(form.configuration.token_regex_in) }}{{ form_widget(form.configuration.token_regex_in) }}
+    <div class="clearContainer"></div>
+    {{ form_label(form.configuration.token_regex_out) }}{{ form_widget(form.configuration.token_regex_out) }}
+    <div class="clearContainer"></div>
     {{ form_label(form.configuration.collection_path) }}{{ form_widget(form.configuration.collection_path) }}
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.label_attribute) }}{{ form_widget(form.configuration.label_attribute) }}
