validation conditions added, icons added, styles changed

--- a/src/Mapbender/CoreBundle/Resources/public/sass/libs/_variables.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/libs/_variables.scss
@@ -26,6 +26,7 @@ $contentColor:#f9f9f9; // very light gray
 $errorColor:#aa2323; // red
 $hintColor:#2375a8; // blue
 $noticeColor:#22a522; // green
+$warningColor:#cece2a; // yellow
 
 $darkFontColor:#3f3f3f; // darker gray
 $middleFontColor:#707070; // lighter gray
