Added HTML element

--- a/src/Mapbender/CoreBundle/Resources/views/corebundle.trans.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/corebundle.trans.twig
@@ -131,3 +131,7 @@
 
 {{ "mb.core.simplesearch.class.title" | trans }}
 {{ "mb.core.simplesearch.class.description" | trans }}
+
+{{ "mb.core.htmlelement.class.title" | trans }}
+{{ "mb.core.htmlelement.class.description" | trans }}
+{{ "mb.core.htmlelement.tag.html" | trans }}
