Added application CSS editor

--- a/src/Mapbender/ManagerBundle/Resources/public/sass/manager/applications.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/manager/applications.scss
@@ -125,3 +125,9 @@
   .typeColumn{width:7%;} // very ugly, but fixing the scale behaviour
   .titleColumn{width: 70%;}
 }
+
+.containerCustomCss {
+  .inputWrapper {
+    width: 100%;
+  }
+}
