collection handling changed

--- a/src/Mapbender/ManagerBundle/Resources/views/Application/form-elements.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/form-elements.html.twig
@@ -5,6 +5,7 @@
   <div class="clearContainer"></div>
   <div class="{{region}} region">
     <h3 class="left subTitle">{{ region | capitalize }}</h3>
+    {% if form.regionProperties is defined %}
     <div class="right regionProperties">
       {% for form_regionProperties in form.regionProperties %}
         {% if form_regionProperties.vars.value.name == region %}
@@ -12,6 +13,7 @@
         {% endif %}
       {% endfor %}
     </div>
+    {% endif %}
     <div class="clearContainer"></div>
       <table class="elementsTable tableCore" data-region="{{ region }}">
         <thead>
