application Screenshot added

--- a/src/Mapbender/ManagerBundle/Resources/views/Application/edit.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/edit.html.twig
@@ -47,7 +47,9 @@
         <li id="tabSecurity" class="tab">{{"mb.manager.admin.application.security" | trans }}</li>
       </ul>
       <div id="containerBaseData" class="container active containerBaseData">
-        {% include 'MapbenderManagerBundle:Application:form-basic.html.twig' %}
+        <div class="left">{% include 'MapbenderManagerBundle:Application:form-basic.html.twig' %}</div>
+        <div class="iconAppDefault right" style="width:300px; height:215px; border:1px solid black;"> <img src="{{screenshot}}" alt="screenshot"></div>
+        <div class="clearContainer"></div>
       </div>
       <div id="containerLayout" class="container containerLayout">
         {% include 'MapbenderManagerBundle:Application:form-elements.html.twig' %}
