--- a/src/Mapbender/ManagerBundle/Resources/views/Application/form-basic.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/form-basic.html.twig
@@ -6,5 +6,9 @@
 {{ form_widget(form.slug) }}<br>
 <div class="clearContainer"></div>
 
+{{ form_label(form.screenshotFile) }}
+{{ form_widget(form.screenshotFile) }}<br>
+<div class="clearContainer"></div>
+
 {{ form_label(form.description) }}
 {{ form_widget(form.description) }}
