--- a/src/Mapbender/CoreBundle/Resources/public/sass/theme/mapbender3.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/theme/mapbender3.scss
@@ -12,6 +12,7 @@
 @import "modules/seperator";
 @import "modules/tabcontainer";
 @import "modules/checkbox";
+@import "modules/radiobutton";
 @import "modules/dropdown";
 
 /* ------------------------------------------------------------- MISC */
