--- a/src/Mapbender/ManagerBundle/Resources/public/sass/manager/manager.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/manager/manager.scss
@@ -13,6 +13,7 @@
 @import "modules/container";
 @import "modules/tabcontainer";
 @import "modules/checkbox";
+@import "modules/radiobutton";
 @import "modules/dropdown";
 @import "modules/table";
 
