--- a/src/Mapbender/ManagerBundle/Resources/views/managerbundle.trans.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/managerbundle.trans.twig
@@ -2,3 +2,6 @@
 {{ "mb.manager.managerbundle.new_application" | trans}}
 {{ "mb.manager.managerbundle.sources" | trans}}
 {{ "mb.manager.managerbundle.add_source" | trans}}
+
+{{ "mb.manager.template.region.tabs.label" | trans}}
+{{ "mb.manager.template.region.accordion.label" | trans}}
