digitizer toolbar element created

--- a/src/Mapbender/CoreBundle/Resources/views/Template/fullscreen.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Template/fullscreen.html.twig
@@ -21,7 +21,7 @@
 
 {% block frontend_content %}
 
-  <div id="templateWrapper" class="templateWrapper sidePaneOpened">
+  <div id="templateWrapper" class="templateWrapper">
     <div class="logoContainer">
       <img class="logo" height="40" alt="Mapbender 3 Manager" src="{{ asset(fom.server_logo)}}" />
     </div>
