Implemented GPS coordinate averaging

--- a/src/Mapbender/ManagerBundle/Resources/views/Element/gpsposition.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/gpsposition.html.twig
@@ -12,6 +12,8 @@
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.target) }}{{ form_widget(form.configuration.target) }}
     <div class="clearContainer"></div>
+    {{ form_label(form.configuration.average) }}{{ form_widget(form.configuration.average) }}
+    <div class="clearContainer"></div>
     {{ form_label(form.configuration.refreshinterval) }}{{ form_widget(form.configuration.refreshinterval) }}
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.follow) }}{{ form_widget(form.configuration.follow) }}
