Metadata handlilng changed

--- a/src/Mapbender/CoreBundle/Resources/views/Element/layertree.json.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/layertree.json.twig
@@ -3,5 +3,6 @@
 "mb.core.layertree.popup.btn.ok": "{{ "mb.core.layertree.popup.btn.ok" | trans}}",
 "mb.core.layertree.const.outofscale": "{{ "mb.core.layertree.const.outofscale" | trans}}",
 "mb.core.layertree.const.outofbounds": "{{ "mb.core.layertree.const.outofbounds" | trans}}",
-"mb.core.layertree.const.parentinvisible": "{{ "mb.core.layertree.const.parentinvisible" | trans}}"
+"mb.core.layertree.const.parentinvisible": "{{ "mb.core.layertree.const.parentinvisible" | trans}}",
+"mb.core.metadata.popup.title" : "{{ "mb.core.metadata.popup.title" | trans }}" 
 }
