--- a/src/Mapbender/WmsBundle/Resources/views/wmsbundle.trans.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/wmsbundle.trans.twig
@@ -7,3 +7,37 @@
 {{ "mb.wms.repository.parser.not_supported_version" | trans}} {#{The WMS version is not supported}#}
 {{ "mb.wms.repository.parser.not_valid_dtd" | trans}} {#{A WMS document (DTD) is not valid}#}
 {{ "mb.wms.repository.parser.not_valid_xsd" | trans}} {#{A WMS document (XSD) is not valid}#}
+
+{{ "mb.wms.metadata.section.common" | trans }}
+{{ "mb.wms.metadata.section.common.title" | trans }}
+{{ "mb.wms.metadata.section.common.name" | trans }}
+{{ "mb.wms.metadata.section.common.version" | trans }}
+{{ "mb.wms.metadata.section.common.originUrl" | trans }}
+{{ "mb.wms.metadata.section.common.description" | trans }}
+{{ "mb.wms.metadata.section.common.onlineResource" | trans }}
+{{ "mb.wms.metadata.section.common.exceptionFormats" | trans }}
+
+{{ "mb.wms.metadata.section.useconditions" | trans }}
+{{ "mb.wms.metadata.section.useconditions.fees" | trans }}
+{{ "mb.wms.metadata.section.useconditions.accessconstraints" | trans }}
+
+{{ "mb.wms.metadata.section.contact" | trans }}
+{{ "mb.wms.metadata.section.contact.person" | trans }}
+{{ "mb.wms.metadata.section.contact.position" | trans }}
+{{ "mb.wms.metadata.section.contact.organization" | trans }}
+{{ "mb.wms.metadata.section.contact.voiceTelephone" | trans }}
+{{ "mb.wms.metadata.section.contact.facsimileTelephone" | trans }}
+{{ "mb.wms.metadata.section.contact.electronicMailAddress" | trans }}
+{{ "mb.wms.metadata.section.contact.address" | trans }}
+{{ "mb.wms.metadata.section.contact.addressType" | trans }}
+{{ "mb.wms.metadata.section.contact.addressCity" | trans }}
+{{ "mb.wms.metadata.section.contact.addressStateOrProvince" | trans }}
+{{ "mb.wms.metadata.section.contact.addressPostCode" | trans }}
+{{ "mb.wms.metadata.section.contact.addressCountry" | trans }}
+{{ "mb.wms.metadata.section.contact.person" | trans }}
+
+{{ "mb.wms.metadata.section.layer" | trans }}
+{{ "mb.wms.metadata.section.layer.name" | trans }}
+{{ "mb.wms.metadata.section.layer.title" | trans }}
+{{ "mb.wms.metadata.section.layer.srs" | trans }}
+{{ "mb.wms.metadata.section.layer.bbox" | trans }}
